2010-06-30 Dong H. Ahn <ahn1@llnl.gov>
	* launchmon/src/sdbg_opt.hxx
	launchmon/src/sdbg_opt.cxx 
	launchmon/src/sdbg_base_driver_impl.hxx
	launchmon/src/lmon_api/lmon_lmonp_msg.h
	launchmon/src/linux/sdbg_linux_launchmon.cxx:	
	Added faster dection of LaunchMON engine parsing errors 
	in reponse to a feature request (ID: 2993295).


2010-06-28 Dong H. Ahn <ahn1@llnl.gov>
	* launchmon/man/Makefile.am 
	launchmon/man/LMON_fe_getRMInfo.3
	launchmon/src/sdbg_base_launchmon_impl.hxx
	launchmon/src/linux/sdbg_linux_launchmon.cxx
	launchmon/src/linux/lmon_api/lmon_fe.cxx
	launchmon/src/lmon_api/lmon_api_std.h
	launchmon/src/lmon_api/lmon_lmonp_msg.h
	launchmon/src/lmon_api/lmon_fe.h
	launchmon/src/sdbg_base_launchmon.hxx
	launchmon/src/sdbg_rm_map.hxx
	test/src/fe_attach_smoketest.cxx
	test/src/fe_launch_smoketest.cxx:
	Added LMON_fe_getRMInfo support


2010-06-25 Dong H. Ahn <ahn1@llnl.gov>
	* ChangeLog
	README.ERROR_HANDLING
	test/src/test.attach_1_remote.in
	test/src/test.fe_regStatusCB.in
	test/src/test.attach_4_shutdownbe.in
	test/src/test.attach_4_kill.in
	test/src/test.attach_2_uneven.in
	test/src/test.attach_1_pdebugmax.in
	test/src/test.attach_1.in:
	Added OpenRTE suport and tested it under ORTE on SLURM 
	environment. 


2010-06-12 Dong H. Ahn <ahn1@llnl.gov>
	* test/src/simple_MPI.c
	test/src/Makefile.in
	test/src/fe_launch_smoketest.cxx
	test/src/be_kicker.cxx
	test/src/Makefile.am
	test/src/test.launch_1.in
	configure
	launchmon/src/sdbg_base_launchmon.hxx
	launchmon/src/lmon_api/lmon_say_msg.hxx
	launchmon/src/linux/lmon_api/lmon_fe.cxx
	launchmon/src/linux/lmon_api/lmon_lmonp_msg.cxx
	launchmon/src/linux/lmon_api/lmon_be_comm.cxx
	launchmon/src/linux/lmon_api/lmon_say_msg.cxx
	launchmon/src/linux/lmon_api/lmon_be.cxx
	launchmon/src/linux/sdbg_linux_launchmon_xt.cxx
	launchmon/src/sdbg_opt.cxx
	ChangeLog
	tools/alps
	tools/alps/src
	tools/alps/src/Makefile.am
	tools/alps/src/alps_be_starter
	tools/alps/src/alps_be_starter.c
	tools/alps/Makefile.am